syntax = "proto3";
package arran8901.chainlogplatform.contract;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "contract/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/arran8901/chainlog-platform/x/contract/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/arran8901/chainlog-platform/contract/params";
  }
  // Queries a list of ContractCode items.
	rpc ContractCode(QueryContractCodeRequest) returns (QueryContractCodeResponse) {
		option (google.api.http).get = "/arran8901/chainlog-platform/contract/contract_code/{contractAddress}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryContractCodeRequest {
  string contractAddress = 1;
}

message QueryContractCodeResponse {
  string code = 1;
  string dynamicKb = 2;
}

// this line is used by starport scaffolding # 3
